syntax = "proto3";

package hvxahv.v1alpha1.proto;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/hvxahv/gateway/api/proto/public/v1alpha";

service Public {
  rpc GetPublicInstance(google.protobuf.Empty) returns (GetPublicInstanceResponse) {
    option (google.api.http) = {
      get: "/instances"
    };
  }

  rpc GetPublicAccountCount(google.protobuf.Empty) returns (GetPublicAccountCountResponse) {
    option (google.api.http) = {
      get: "/accounts/count"
    };
  }

  rpc GetWebfinger(GetWebfingerRequest) returns (GetWebfingerResponse) {
    option (google.api.http) = {
      get: "/.well-known/webfinger"
    };
  }

  rpc GetActor(GetActorRequest) returns (GetActorResponse) {
    option (google.api.http) = {
      get: "/u/{actor}"
    };
  }
}

message GetPublicInstanceResponse {
  string code = 1;
  string version = 2;
  string build = 3;
  string maintainer = 4;
  string repo = 5;
  string host = 6;
}

message GetPublicAccountCountResponse {
  string code = 1;
  string accountCount = 2;
}

message GetWebfingerRequest {
  string resource = 1;
}

message GetWebfingerResponse {
  message link {
    string rel = 1;
    string type = 2;
    string href = 3;
  }
  string subject = 1;
  repeated string aliases = 2;
  repeated link links = 3;
}

message GetActorRequest {
  string actor = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetActorResponse {
  message PublicKey {
    string id = 1;
    string owner = 2;
    string publicKeyPem = 3;
  }

  message Icon {
    string type = 1;
    string url = 2;
    string mediaType = 3;
  }

  repeated string context = 1 [json_name = "@context"];
  string id = 2;
  string type = 3;
  string following = 4;
  string followers = 5;
  string inbox = 6;
  string outbox = 7;
  string preferredUsername = 8;
  string name = 9;
  string summary = 10;
  string url = 11;
  PublicKey publicKey = 12;
}
